<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">JOSE</string>
    <string name="last_name">MENDOZA</string>!)
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">HEY! I am a first gen college student.\nI have always loved tinkering with old electronics from thrift\nstores and have coded two game boy games\n so I am super excited to code my first android app!</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 REPAIRING OLD GAME BOYS</string>
    <string name="profile_hobby_second_text">🥈 TENNIS TENNIS TENNIS</string>
    <string name="profile_hobby_third_text">🥉 REPURPOSING OLD ELECTRONICS</string>
</resources>